@@ -6,6 +6,6 @@ use SPVM::Builder::Config;
 my $bconf = SPVM::Builder::Config->new_c99;
 
 $bconf->optimize('-O2');
-$bconf->force_compile(1);
+$bconf->force(1);
 
 $bconf;
